/*
 * Copyright (c) 2024.
 * Created by Andy Pangaribuan <https://github.com/apangaribuan>.
 *
 * This product is protected by copyright and distributed under
 * licenses restricting copying, distribution and decompilation.
 * All Rights Reserved.
 */


syntax = "proto3";
package sclog;
option go_package = "res/proto/generated/sclog";
import "google/protobuf/wrappers.proto";



service CLogService {
  rpc DbqV1(RequestDbqV1) returns (Response);
  rpc ServicePieceV1(RequestServicePieceV1) returns (Response);
  rpc ServiceV1(RequestServiceV1) returns (Response);
}



/*
 * status: enum [ok, !ok]
 */
message Response {
  string status   = 1;
  string message  = 2;
}



/*
 * startedAt : format "yyyy-MM-dd HH:mm:ss.SSSSSS TZ"
 * finishedAt: format "yyyy-MM-dd HH:mm:ss.SSSSSS TZ"
 */
message RequestDbqV1 {
  string uid                                  = 1;
  google.protobuf.StringValue userId          = 2;
  google.protobuf.StringValue partnerId       = 3;
  string svcName                              = 4;
  string svcVersion                           = 5;
  string sqlQuery                             = 6;
  google.protobuf.StringValue sqlArgs         = 7;
  string severity                             = 8;
  string execPath                             = 9;
  string function                             = 10;
  google.protobuf.StringValue errorMessage    = 11;
  google.protobuf.StringValue stackTrace      = 12;
  string host1                                = 13;
  google.protobuf.StringValue host2           = 14;
  int32 duration1                             = 15;
  google.protobuf.Int32Value duration2        = 16;
  string startedAt                            = 17;
  string finishedAt                           = 18;
}



/*
 * startedAt : format "yyyy-MM-dd HH:mm:ss.SSSSSS TZ"
 */
message RequestServicePieceV1 {
  string uid                              = 1;
  string svcName                          = 2;
  string svcVersion                       = 3;
  string endpoint                         = 4;
  string url                              = 5;
  google.protobuf.StringValue reqHeader   = 6;
  google.protobuf.StringValue reqParam    = 7;
  google.protobuf.StringValue reqQuery    = 8;
  google.protobuf.StringValue reqForm     = 9;
  google.protobuf.StringValue reqBody     = 10;
  string clientIp                         = 11;
  string startedAt                        = 12;
}



/*
 * startedAt : format "yyyy-MM-dd HH:mm:ss.SSSSSS TZ"
 * finishedAt: format "yyyy-MM-dd HH:mm:ss.SSSSSS TZ"
 */
message RequestServiceV1 {
  string uid                                = 1;
  google.protobuf.StringValue userId        = 2;
  google.protobuf.StringValue partnerId     = 3;
  string svcName                            = 4;
  string svcVersion                         = 5;
  google.protobuf.StringValue svcParent     = 6;
  string endpoint                           = 7;
  string url                                = 8;
  string severity                           = 9;
  string path                               = 10;
  string function                           = 11;
  google.protobuf.StringValue reqVersion    = 12;
  google.protobuf.StringValue reqHeader     = 13;
  google.protobuf.StringValue reqParam      = 14;
  google.protobuf.StringValue reqQuery      = 15;
  google.protobuf.StringValue reqForm       = 16;
  google.protobuf.StringValue reqBody       = 17;
  google.protobuf.StringValue resData       = 18;
  int32 resCode                             = 19;
  google.protobuf.StringValue errMessage    = 20;
  google.protobuf.StringValue stackTrace    = 21;
  string clientIp                           = 22;
  int32 duration                            = 23;
  string startedAt                          = 24;
  string finishedAt                         = 25;
}
