/*
 * Copyright (c) 2022.
 * Created by Andy Pangaribuan. All Rights Reserved.
 *
 * This product is protected by copyright and distributed under
 * licenses restricting copying, distribution and decompilation.
 */

syntax = "proto3";

package clog;

option java_multiple_files = true;
option java_package = "io.grpc.examples.helloworld";
option java_outer_classname = "HelloWorldProto";
option objc_class_prefix = "HLW";

option go_package = "proto/generated/clog";

// import "google/protobuf/struct.proto";
import "google/protobuf/wrappers.proto";



service CLogService {
  rpc ServiceLog(RequestServiceLog) returns (Response);
  rpc InfoLog(RequestInfoLog) returns (Response);
}


message Response {
  string status = 1;
  string message = 2;
}


message RequestServiceLog {
  string id = 1;
  string svcName = 2;
  google.protobuf.StringValue svcParent = 3;
  google.protobuf.StringValue message = 4;
  string severity = 5;
  google.protobuf.StringValue reqHeader = 6;
  google.protobuf.StringValue reqBody = 7;
  google.protobuf.StringValue reqPar = 8;
  google.protobuf.StringValue resData = 9;
  google.protobuf.Int32Value resCode = 10;
  google.protobuf.StringValue data = 11;
  google.protobuf.StringValue error = 12;
  google.protobuf.StringValue stackTrace = 13;
  string startAt = 14; // RFC3339 MilliSecond
  string finishAt = 15; // RFC3339 MilliSecond
  string createdAt = 16; // RFC3339 MilliSecond
}


message RequestInfoLog {
  string id = 1;
  string svcName = 2;
  google.protobuf.StringValue svcParent = 3;
  string message = 4;
  string severity = 5;
  google.protobuf.StringValue data = 6;
  string createdAt = 7; // RFC3339 MilliSecond
}
